--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </nav>
 
     <div class="main-content">
-      <h1>Welcome to PT. Naval Overseas</h1>
+      <h1>Welcome to PT. Aditya Anjel Anugrah</h1>
       <p>
         PT. Naval Overseas is a well-known and reputable manufacturer, processor
         and exporter of Indonesian natural products such as oleo pine resin, gum
