--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PT. Aditya Anjel Anugrah</title>
+    <title>PT. Naval Overseas</title>
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -294,8 +294,8 @@
         <li>
           <a href="#">Products</a>
           <ul>
-            <li><a href="oleo-pine-resin.html">Oleo Pine Resin</a></li>
-            <li><a href="gum-rosin.html">Gum Rosin</a></li>
+            <!-- <li><a href="oleo-pine-resin.html">Oleo Pine Resin</a></li> -->
+            <!-- <li><a href="gum-rosin.html">Gum Rosin</a></li> -->
             <li><a href="gum-benjamin.html">Gum Benjamin</a></li>
             <li><a href="gum-copal.html">Gum Copal</a></li>
             <li><a href="gum-damar.html">Gum Damar</a></li>
@@ -310,12 +310,12 @@
         </li>
         <li><a href="#">Liase With Us</a></li>
         <li><a href="#">Enquiry</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
 
     <div class="main-content">
-      <h1>Welcome to PT. Aditya Anjel Anugrah</h1>
+      <h1>Welcome to PT. Naval Overseas</h1>
       <p>
         PT. Naval Overseas is a well-known and reputable manufacturer, processor
         and exporter of Indonesian natural products such as oleo pine resin, gum
