--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li>
           <a href="#">Products</a>
           <ul>
