--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
             </li>
           </ul>
         </li>
+        <li><a href="#">Services</a></li>
         <li><a href="#">Liase With Us</a></li>
         <li><a href="#">Enquiry</a></li>
         <li><a href="contact.html">Contact Us</a></li>
