--- a/contact.html
+++ b/contact.html
@@ -187,6 +187,7 @@
             </li>
           </ul>
         </li>
+        <li><a href="#">Services</a></li>
         <li><a href="#">Liase With Us</a></li>
         <li><a href="#">Enquiry</a></li>
         <li><a href="contact.html">Contact Us</a></li>
