--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PT. Naval Overseas</title>
+    <title>PT. Aditya Anjel Anugrah</title>
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -316,7 +316,7 @@
     </nav>
 
     <div class="main-content">
-      <h1>Welcome to PT. Naval Overseas</h1>
+      <h1>Welcome to PT. Aditya Anjel Anugrah</h1>
       <p>
         PT. Naval Overseas is a well-known and reputable manufacturer, processor
         and exporter of Indonesian natural products such as oleo pine resin, gum
