--- a/index.html
+++ b/index.html
@@ -308,7 +308,11 @@
             </li>
           </ul>
         </li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#">Services</a>
+        <ul>
+          <li><a href="#"> Technical Consultancy</a></li>
+        </ul>
+        </li>
         <li><a href="#">Liase With Us</a></li>
         <li><a href="#">Enquiry</a></li>
         <li><a href="contact.html">Contact Us</a></li>
