--- a/index.html
+++ b/index.html
@@ -322,22 +322,11 @@
     <div class="main-content">
       <h1>Welcome to PT. Aditya Anjel Anugrah</h1>
       <p>
-        PT. Naval Overseas is a well-known and reputable manufacturer, processor
-        and exporter of Indonesian natural products such as oleo pine resin, gum
-        rosin, gum copal, gum damar, gum benjamin, damar batu, turpentine and
-        spices such as cloves, pepper, Indonesian cinnamon (cassia vera). The
-        company was established in 2006 realizing the huge potential of natural
-        products in Indonesia. The company now exports globally to countries
-        like Abu Dhabi, China, Germany, Japan, Spain and the Indian
-        Sub-Continent. The Company sources its raw material from all over
-        Indonesia and has warehouses located in strategic locations where
-        cleaning, processing and quality control is done. It has offices in
-        Jakarta and Delhi. The Company's main emphasis is on Quality, Timely
-        delivery and Commitment. It understands its customers' every need by
-        providing products of premium quality at reasonable prices and stands
-        firmly behind each of its shipments. Today we are one of the most
-        trusted suppliers from Indonesia and we strive to provide our buyers
-        with premium products at reasonable prices.
+        PT. Aditya Anjel Anugrah is a well-known and reputable manufacturer, processor, and exporter of Indonesian natural products such as oleo pine resin, gum rosin, gum copal, gum damar, gum benjamin, damar batu, turpentine, and spices such as cloves, pepper, and Indonesian cinnamon (cassia vera). The company was established in 2006, realizing the huge potential of natural products in Indonesia.
+
+The company now exports globally to countries like Abu Dhabi, China, Germany, Japan, Spain, and the Indian Sub-Continent. PT. Aditya Anjel Anugrah sources its raw materials from all over Indonesia and has warehouses located in strategic locations where cleaning, processing, and quality control are meticulously carried out. It has offices in Jakarta and Delhi.
+
+The company’s main emphasis is on quality, timely delivery, and commitment. It understands its customers’ every need by providing products of premium quality at reasonable prices and stands firmly behind each of its shipments. Today, PT. Aditya Anjel Anugrah is one of the most trusted suppliers from Indonesia, striving to provide its buyers with premium products at reasonable prices.
       </p>
 
       <div class="slideshow-container">
