--- a/index.html
+++ b/index.html
@@ -294,17 +294,18 @@
         <li>
           <a href="#">Products</a>
           <ul>
-            <!-- <li><a href="oleo-pine-resin.html">Oleo Pine Resin</a></li> -->
-            <!-- <li><a href="gum-rosin.html">Gum Rosin</a></li> -->
-            <li><a href="gum-benjamin.html">Gum Benjamin</a></li>
+            <li><a href="oleo-pine-resin.html">Palm Oil</a></li>
+            <li><a href="gum-rosin.html">Coal</a></li>
+            <li><a href="gum-benjamin.html">Agro Products</a></li>
             <li><a href="gum-copal.html">Gum Copal</a></li>
             <li><a href="gum-damar.html">Gum Damar</a></li>
             <li><a href="damar-batu.html">Damar Batu</a></li>
-            <li><a href="cassia-vera.html">Cassia Vera</a></li>
+            <li><a href="cassia-vera.html">Cinnamon</a></li>
             <li><a href="cloves.html">Cloves</a></li>
             <li><a href="pepper.html">Pepper</a></li>
+            <li><a href="pepper.html">Steel Products(Coated and prepainted)</a></li>
             <li>
-              <a href="turpentine-oil.html">Turpentine Oil / Alpha Pinene</a>
+              <a href="turpentine-oil.html">Steel Scraps</a>
             </li>
           </ul>
         </li>
