--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
       <h2>Contact Form</h2>
       <form>
         <div class="form-group">
-          <label for="contact-person">Contact Person</label>
+          <label for="contact-person">Name</label>
           <input type="text" id="contact-person" name="contact-person" />
         </div>
         <div class="form-group">
