Footer added & Navbar updated

--- a/contact.html
+++ b/contact.html
@@ -166,34 +166,36 @@
         <button>Search</button>
       </div>
     </header>
-
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li>
           <a href="#">Products</a>
           <ul>
-            <li><a href="oleo-pine-resin.html">Oleo Pine Resin</a></li>
-            <li><a href="gum-rosin.html">Gum Rosin</a></li>
-            <li><a href="gum-benjamin.html">Gum Benjamin</a></li>
+            <li><a href="oleo-pine-resin.html">Palm Oil</a></li>
+            <li><a href="gum-rosin.html">Coal</a></li>
             <li><a href="gum-copal.html">Gum Copal</a></li>
             <li><a href="gum-damar.html">Gum Damar</a></li>
             <li><a href="damar-batu.html">Damar Batu</a></li>
-            <li><a href="cassia-vera.html">Cassia Vera</a></li>
+            <li><a href="cassia-vera.html">Cinnamon</a></li>
             <li><a href="cloves.html">Cloves</a></li>
             <li><a href="pepper.html">Pepper</a></li>
+            <li><a href="pepper.html">Steel Products(Coated and prepainted)</a></li>
             <li>
-              <a href="turpentine-oil.html">Turpentine Oil / Alpha Pinene</a>
+              <a href="turpentine-oil.html">Steel Scraps</a>
             </li>
           </ul>
         </li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#">Services</a>
+        <ul>
+          <li><a href="#"> Technical Consultancy</a></li>
+        </ul>
+        </li>
         <li><a href="#">Liase With Us</a></li>
         <li><a href="#">Enquiry</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
-
     <div class="form-container">
       <h2>Contact Form</h2>
       <form>
@@ -228,4 +230,42 @@
       </form>
     </div>
   </body>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="footer-col">
+          <h2>Explore</h2>
+          <ul>
+            <li><a href="engineering.html">engineering</a></li>
+            <li><a href="medical.html">medical</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h2>KUSRAY</h2>
+          <ul>
+            <li><a href="#">about us</a></li>
+            <li><a href="ourteam.html">our team</a></li>
+            <li><a href="#">privacy policy</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h2>get help</h2>
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="Contactus.html">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h2>follow us</h2>
+          <div class="social-media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+  </footer>
 </html>
