--- a/index.html
+++ b/index.html
@@ -222,4 +222,42 @@
       showSlides(); // Initialize the slideshow
     </script>
   </body>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="footer-col">
+          <h2>Explore</h2>
+          <ul>
+            <li><a href="engineering.html">engineering</a></li>
+            <li><a href="medical.html">medical</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h2>KUSRAY</h2>
+          <ul>
+            <li><a href="#">about us</a></li>
+            <li><a href="ourteam.html">our team</a></li>
+            <li><a href="#">privacy policy</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h2>get help</h2>
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="Contactus.html">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h2>follow us</h2>
+          <div class="social-media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+  </footer>
 </html>
