Team page added

--- a/index.html
+++ b/index.html
@@ -226,17 +226,17 @@
     <div class="container">
       <div class="row">
         <div class="footer-col">
-          <h2>Explore</h2>
+          <h2>Explore Servies</h2>
           <ul>
-            <li><a href="engineering.html">engineering</a></li>
-            <li><a href="medical.html">medical</a></li>
+            <li><a href="#">Import/Export</a></li>
+            <li><a href="#">Technical Consultancy</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h2>KUSRAY</h2>
           <ul>
             <li><a href="#">about us</a></li>
-            <li><a href="ourteam.html">our team</a></li>
+            <li><a href="team.html">our team</a></li>
             <li><a href="#">privacy policy</a></li>
           </ul>
         </div>
