Header/Footer updated

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </ul>
         </div>
         <div class="footer-col">
-          <h2>KUSRAY</h2>
+          <h2>PT. Aditya Anjel Anugrah</h2>
           <ul>
             <li><a href="#">about us</a></li>
             <li><a href="team.html">our team</a></li>
