Image pushed inside folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <img src="logo.png" alt="PT. Naval Overseas" class="logo" />
+      <img src="Photos/logo.png" alt="PT. Naval Overseas" class="logo" />
       <div class="search-bar">
         <input type="text" placeholder="Search" />
         <button>Search</button>
@@ -74,10 +74,10 @@
 
       <div class="slideshow-container">
         <div class="slide">
-          <img src="gunrosin.png" alt="Gum Rosin" />
+          <img src="Photos/gunrosin.png" alt="Gum Rosin" />
         </div>
         <div class="slide">
-          <img src="gum-benjamin.png" alt="Gum Benjamin" />
+          <img src="Photos/gum-benjamin.png" alt="Gum Benjamin" />
         </div>
       </div>
 
@@ -154,14 +154,14 @@
       <h2>Client Testimonials</h2>
       <div class="testimonials">
         <div class="testimonial">
-          <img src="client-1.png" alt="Client 1" />
+          <img src="Photos/client-1.png" alt="Client 1" />
           <div>
             <p class="client-feedback">"Great service and products!"</p>
             <p class="client-name">- Robert Fox</p>
           </div>
         </div>
         <div class="testimonial">
-          <img src="client-1.png" alt="Client 2" />
+          <img src="Photos/client-1.png" alt="Client 2" />
           <div>
             <p class="client-feedback">
               "Excellent quality and fast delivery."
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="testimonial">
-          <img src="client-1.png" alt="Client 3" />
+          <img src="Photos/client-1.png" alt="Client 3" />
           <div>
             <p class="client-feedback">"Highly recommended supplier."</p>
             <p class="client-name">- Darlene Flores</p>
@@ -181,23 +181,23 @@
       <h2>Featured Products</h2>
       <div class="products">
         <div class="product">
-          <img src="pr.png" alt="Gum Copal" />
+          <img src="Photos/pr.png" alt="Gum Copal" />
           <p>Gum Copal</p>
         </div>
         <div class="product">
-          <img src="pr.png" alt="Gum Rosin Grade" />
+          <img src="Photos/pr.png" alt="Gum Rosin Grade" />
           <p>Gum Rosin Grade</p>
         </div>
         <div class="product">
-          <img src="pr.png" alt="Pine Resin" />
+          <img src="Photos/pr.png" alt="Pine Resin" />
           <p>Pine Resin</p>
         </div>
         <div class="product">
-          <img src="pr.png" alt="Gum Damar" />
+          <img src="Photos/pr.png" alt="Gum Damar" />
           <p>Gum Damar</p>
         </div>
         <div class="product">
-          <img src="pr.png" alt="Damar Batu" />
+          <img src="Photos/pr.png" alt="Damar Batu" />
           <p>Damar Batu</p>
         </div>
       </div>
