--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PT. Aditya Anjel Anugrah</title>
-    <link rel="stylesheet" href="indexstyle.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <img src="Photos/logo.png" alt="PT. Naval Overseas" class="logo" />
+      <img src="images/logo.png" alt="PT. Naval Overseas" class="logo" />
       <div class="search-bar">
         <input type="text" placeholder="Search" />
         <button>Search</button>
@@ -25,25 +25,17 @@
         <li>
           <a href="#">Products</a>
           <ul>
-            <li><a href="oleo-pine-resin.html">Palm Oil</a></li>
-            <li><a href="gum-rosin.html">Coal</a></li>
-            <li><a href="gum-copal.html">Gum Copal</a></li>
             <li><a href="gum-damar.html">Gum Damar</a></li>
             <li><a href="damar-batu.html">Damar Batu</a></li>
-            <li><a href="cassia-vera.html">Cinnamon</a></li>
+            <li><a href="coal.html">Coal</a></li>
+            <li><a href="palm-oil.html">Palm Oil</a></li>
             <li><a href="cloves.html">Cloves</a></li>
             <li><a href="pepper.html">Pepper</a></li>
-            <li><a href="pepper.html">Steel Products(Coated and prepainted)</a></li>
-            <li>
-              <a href="turpentine-oil.html">Steel Scraps</a>
-            </li>
+            <li><a href="agro.html">Agro Products</a></li>
+            <li><a href="steel.html">Steel & Steel Scraps</a></li>
           </ul>
         </li>
-        <li><a href="#">Services</a>
-        <ul>
-          <li><a href="#"> Technical Consultancy</a></li>
-        </ul>
-        </li>
+        <li><a href="#">Services</a></li>
         <li><a href="#">Liase With Us</a></li>
         <li><a href="#">Enquiry</a></li>
         <li><a href="contact.html">Contact Us</a></li>
@@ -74,10 +66,10 @@
 
       <div class="slideshow-container">
         <div class="slide">
-          <img src="Photos/gunrosin.png" alt="Gum Rosin" />
+          <img src="images/gunrosin.png" alt="Gum Rosin" />
         </div>
         <div class="slide">
-          <img src="Photos/gum-benjamin.png" alt="Gum Benjamin" />
+          <img src="images/gum-benjamin.png" alt="Gum Benjamin" />
         </div>
       </div>
 
@@ -129,7 +121,7 @@
       <h2>Latest News</h2>
       <div class="news-section">
         <div class="news-item">
-          <img src="news1.jpg" alt="News 1" />
+          <img src="images/news1.jpg" alt="News 1" />
           <p>
             New year, growth is expected to contract by a little above 1%,
             analysts say
@@ -137,12 +129,12 @@
           <a href="#">Read More</a>
         </div>
         <div class="news-item">
-          <img src="news1.jpg" alt="News 2" />
+          <img src="images/news1.jpg" alt="News 2" />
           <p>Bitcoin rose by 15% in seven out of the last eight years.</p>
           <a href="#">Read More</a>
         </div>
         <div class="news-item">
-          <img src="news1.jpg" alt="News 3" />
+          <img src="images/news1.jpg" alt="News 3" />
           <p>
             By 2024 India will have more than 300 million people in the fourth
             largest in the world after China, India and the U.S.
@@ -152,16 +144,17 @@
       </div>
 
       <h2>Client Testimonials</h2>
+
       <div class="testimonials">
         <div class="testimonial">
-          <img src="Photos/client-1.png" alt="Client 1" />
+          <img src="images/client-1.png" alt="Client 1" />
           <div>
             <p class="client-feedback">"Great service and products!"</p>
             <p class="client-name">- Robert Fox</p>
           </div>
         </div>
         <div class="testimonial">
-          <img src="Photos/client-1.png" alt="Client 2" />
+          <img src="images/client-1.png" alt="Client 2" />
           <div>
             <p class="client-feedback">
               "Excellent quality and fast delivery."
@@ -170,7 +163,7 @@
           </div>
         </div>
         <div class="testimonial">
-          <img src="Photos/client-1.png" alt="Client 3" />
+          <img src="images/client-1.png" alt="Client 3" />
           <div>
             <p class="client-feedback">"Highly recommended supplier."</p>
             <p class="client-name">- Darlene Flores</p>
@@ -181,28 +174,55 @@
       <h2>Featured Products</h2>
       <div class="products">
         <div class="product">
-          <img src="Photos/pr.png" alt="Gum Copal" />
+          <img src="images/pr.png" alt="Gum Copal" />
           <p>Gum Copal</p>
         </div>
         <div class="product">
-          <img src="Photos/pr.png" alt="Gum Rosin Grade" />
+          <img src="images/pr.png" alt="Gum Rosin Grade" />
           <p>Gum Rosin Grade</p>
         </div>
         <div class="product">
-          <img src="Photos/pr.png" alt="Pine Resin" />
+          <img src="images/pr.png" alt="Pine Resin" />
           <p>Pine Resin</p>
         </div>
         <div class="product">
-          <img src="Photos/pr.png" alt="Gum Damar" />
+          <img src="images/pr.png" alt="Gum Damar" />
           <p>Gum Damar</p>
         </div>
         <div class="product">
-          <img src="Photos/pr.png" alt="Damar Batu" />
+          <img src="images/pr.png" alt="Damar Batu" />
           <p>Damar Batu</p>
         </div>
       </div>
     </div>
-
+    <footer class="footer">
+      <div class="container">
+        <div class="column">
+          <img src="images/logo.png" alt="Company Logo" style="width: 300px" />
+        </div>
+        <div class="column">
+          <h3>Contact Us</h3>
+          <p>Email: admin@aditya-anjel.com</p>
+          <p>Phone: 0711-5710633</p>
+          <p>
+            Grand Asia Business Park E-12D - E-12C - F1B R6 Jl. Siliwangi Km 1A
+            No. 5A, Benua Cilegon, Angin Laut Kelapa (Komplek) Perumahan Puri
+            Nirwana Sutasoma Sektor
+          </p>
+        </div>
+        <div class="column">
+          <h3>Follow Us</h3>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        &copy; 2024 PT. Aditya Anjel Anugrah. All rights reserved.
+      </div>
+    </footer>
     <script>
       let slideIndex = 0;
 
@@ -222,42 +242,4 @@
       showSlides(); // Initialize the slideshow
     </script>
   </body>
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="footer-col">
-          <h2>Explore Servies</h2>
-          <ul>
-            <li><a href="#">Import/Export</a></li>
-            <li><a href="#">Technical Consultancy</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h2>PT. Aditya Anjel Anugrah</h2>
-          <ul>
-            <li><a href="#">about us</a></li>
-            <li><a href="team.html">our team</a></li>
-            <li><a href="#">privacy policy</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h2>get help</h2>
-          <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="Contactus.html">Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h2>follow us</h2>
-          <div class="social-media">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
-      </div>
-  </footer>
 </html>
