--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
         <div class="column">
           <h3>Contact Us</h3>
-          <p>Email: admin@aditya-anjel.com</p>
+          <p>Email: info@adityaanjelanugrah.com</p>
           <p>Phone: 0711-5710633</p>
           <p>
             Grand Asia Business Park E-12D - E-12C - F1B R6 Jl. Siliwangi Km 1A
