--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Form</title>
     <link rel="stylesheet" href="styles/style1.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
 </head>
 <body>
     <header>
@@ -44,7 +48,7 @@
         <h2>Contact Form</h2>
         <form id="contact-form">
             <div class="form-group">
-                <label for="contact-person">Contact Person</label>
+                <label for="contact-person">Name</label>
                 <input type="text" id="contact-person" name="contact-person" required />
             </div>
             <div class="form-group">
@@ -72,8 +76,38 @@
                 <button type="reset" class="reset-btn">Reset</button>
             </div>
         </form>
+        
     </div>
-
+    <div>
+        <footer class="footer">
+            <div class="container">
+              <div class="column">
+                <img src="images/logo.png" alt="Company Logo" style="width: 300px" />
+              </div>
+              <div class="column">
+                <h3>Contact Us</h3>
+                <p>Email: <a href="mailto:info@adityaanjelanugrah.com">info@adityaanjelanugrah.com</a></p>
+                <p>Phone: 0711-5710633</p>
+                <p>
+                  Grand Asia Business Park E-12D - E-12C - F1B R6 Jl. Siliwangi Km 1A
+                  No. 5A, Benua Cilegon, Angin Laut Kelapa (Komplek) Perumahan Puri
+                  Nirwana Sutasoma Sektor
+                </p>
+              </div>
+              <div class="column">
+                <h3>Follow Us</h3>
+                <div class="social-icons">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="copyright">
+              &copy; 2024 PT. Aditya Anjel Anugrah. All rights reserved.
+            </div>
+          </footer>
+    </div>
     <script>
         const scriptURL = "https://script.google.com/macros/s/AKfycbyUVNZFQr_gbt31S-wBGmObc910JGHB-8N9-agw6lM3yr-mYjgecdH-2KEB9xfk89NF/exec";
         const form = document.getElementById('contact-form');
